--- a/21611121message.md
+++ b/21611121message.md
@@ -1,11 +1,11 @@
-＃メリークリスマス
-・自己紹介
-・オムライス
+#メリークリスマス
+＊自己紹介
+＊食べ物好き嫌い
 
-First Header | Second Header
+好き |　嫌い
 ------------ | -------------
-Content from cell 1 | Content from cell 2
-Content in the first column | Content in the second column
-**あいうえお**
+ハヤシライス | しいたけ
+トマト | ひじき
+**野菜大好き**
 :bowtie:
 ｛多摩大学｝（http://www.tama.ac.jp)
